# quiz-lab

./: asgi.py  manage.py  models.py  pyproject.toml  settings.py  urls.py  wsgi.py
quizlab/: README.md
