[project]
name = "quizlab"
version = "0.1.0"
description = "A quiz system that allows instructors to assess students"
authors = [
    {name = "Harmless, Miss Engineer, G.O.A.T"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
